--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "abhishek_kadavergu_portfolio",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.0.2",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
+    "@vercel/analytics": "^1.6.1",
     "dotenv": "^16.3.1",
     "framer-motion": "^12.24.12",
     "googleapis": "^131.0.0",
